# krff-shell

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  HOOKS.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  cli.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: guard-private-files.py  run-tests-after-edit.py
.claude/skills/preflight/: SKILL.md
.claude/skills/push/: SKILL.md
.github/workflows/: test.yml
00_Reference/: 01_Policy_Context.md  02_Data_Sources.md  03_Project_Rationale.md  04_Technical_Architecture.md  05_Regulatory_Environment.md  06_Existing_Infrastructure.md  07_Automation_Assessment.md  08_Continuous_Monitoring_System.md  09_Claude_Cost_Optimization.md  10_Multi_Agent_Architecture.md  11_Industry_Classification.md  14_GMT_Research_Deep_Dive.md  15_FSCMA_Regulatory_Analysis.md  16_CPA_Act_Regulatory_Analysis.md  17_MVP_Requirements.md  18_Research_Findings.md  19_Data_Refresh_Cadence.md  19_Pipeline_Improvement_Areas.md  20_Cloud_Infrastructure_Setup.md  21_Test_Suite.md  22_Phase1_Completion_Record.md  23_GitHub_Release_Checklist.md  24_VPS_Setup_Procedure.md  26_Beneish_MScore_Components.md  27_Phase1_Analytical_Research_Questions.md  29_Railway_Infrastructure_Analysis.md  31_Full_Project_Arc.md  32_Monitoring_Prereqs_Research.md  ROADMAP.md  pipeline-details.md  reference-index.md
00_Reference/verify/: README.md  check_acceptance_criteria.py  oq_a_ksic_financial_codes.py  oq_b_expense_method_prevalence.py  oq_c_cfs_ofs_split.py  oq_d_rate_limit_window.py  oq_e_noncurrent_borrowings_element.py  oq_f_bulk_download.py  verify_utils.py
02_Pipeline/: README.md  _pipeline_helpers.py  build_isin_map.py  extract_bondholder_register.py  extract_cb_bw.py  extract_corp_actions.py  extract_corp_ticker_map.py  extract_dart.py  extract_depreciation_schedule.py  extract_disclosures.py  extract_kftc.py  extract_krx.py  extract_major_holders.py  extract_officer_holdings.py  extract_price_volume.py  extract_revenue_schedule.py  extract_seibro.py  extract_seibro_repricing.py  pipeline.py  transform.py
03_Analysis/: README.md  _scoring.py  beneish_screen.py  beneish_viz.html  beneish_viz.py  cb_bw_timelines.py  officer_network.py  phase1_research_questions.py  run_cb_bw_timelines.py  run_officer_network.py  run_timing_anomalies.py  timing_anomalies.py
krff/: __init__.py  _paths.py  charts.py  mcp_server.py
src/: __init__.py  _paths.py  charts.py  constants.py  data_access.py  db.py  mcp_server.py  models.py  quality.py  report.py  review.py  stats_runner.py  status.py
tests/: conftest.py  test_acceptance_criteria.py  test_cli.py  test_e2e_synthetic.py  test_mcp_server.py  test_pipeline_invariants.py  top50_spot_check.csv
tests/fixtures/: dart_xbrl_crosswalk.csv
