[project]
name = "kr-forensic-finance"
version = "1.5.0"
requires-python = ">=3.11"
description = "Public infrastructure for systematic anomaly screening across Korean listed companies"
authors = [{name = "pon00050"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["kosdaq", "dart", "beneish", "financial-forensics", "korea", "open-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # Phase 1 — Beneish screen
    "opendartreader",   # DART API client
    "pykrx",            # KOSDAQ ticker list
    "pandas",
    "pyarrow",          # parquet I/O
    "marimo",           # analysis notebook format (interactive UI deferred; scripts run as plain Python)
    "plotly",           # charts in notebook
    "requests",         # WICS API calls
    "tqdm",             # optional progress bars in extract_dart (graceful fallback if absent)
    "python-dotenv",
    "typer>=0.9.0",     # CLI entry point (krff command)

    # Cloud storage (optional — R2 upload + DuckDB remote reads)
    "s3fs>=2024.1.0",
    "boto3>=1.34.0",
    "duckdb>=1.0.0",
    "setuptools<82",        # pykrx requires pkg_resources; setuptools>=82 removed it
    "lxml",                 # pd.read_html() backend for bondholder + revenue HTML parsing

    # Phase 2 additions (uncomment when starting Phase 2):
    # "dart-fss",             # DS005 CB/BW structured endpoint helpers
    # "playwright",           # SEIBRO scraping (WebSquare JS rendering)
    # "beautifulsoup4",       # SEIBRO + KFTC HTML parsing (extract_seibro.py, extract_kftc.py)
    # "scipy",                # statistical tests for timing anomaly analysis
    # "FinanceDataReader",    # PyKRX spike alternative — test with --backend fdr from Railway
    # "yfinance",             # PyKRX spike alternative — test with --backend yfinance from Railway

    # Phase 3 additions (uncomment when starting Phase 3):
    # "networkx",       # officer network graph
    # "pyvis",          # interactive HTML graph rendering
]

[project.scripts]
krff = "cli:app"

[project.urls]
Repository = "https://github.com/pon00050/kr-forensic-finance"
Issues = "https://github.com/pon00050/kr-forensic-finance/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["02_Pipeline", "03_Analysis", "src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
compile-bytecode = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
