[project]
name = "kr-forensic-finance"
version = "1.5.0"
requires-python = ">=3.11"
description = "Public infrastructure for systematic anomaly screening across Korean listed companies"
authors = [{name = "pon00050"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["kosdaq", "dart", "beneish", "financial-forensics", "korea", "open-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "anthropic>=0.40.0",
    "opendartreader",
    "pykrx>=1.2.0",
    "pandas",
    "pyarrow",
    "marimo",
    "plotly",
    "requests",
    "tqdm",
    "python-dotenv",
    "typer>=0.9.0",
    "s3fs>=2024.1.0",
    "boto3>=1.34.0",
    "duckdb>=1.0.0",
    "setuptools<82",
    "lxml",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "lifelines>=0.29.0",
    "networkx>=3.0",
    "kaleido>=0.2.1",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "cachetools>=5.3.0",
    "fastmcp>=3.1.0",
    "exchange-calendars>=4.13.2",
    "holidays>=0.92",
]

[project.scripts]
krff = "cli:app"

[project.urls]
Repository = "https://github.com/pon00050/kr-forensic-finance"
Issues = "https://github.com/pon00050/kr-forensic-finance/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["02_Pipeline", "03_Analysis", "src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.23.0",
]
hosted = [
    "finance-datareader",
    "yfinance",
]

[tool.uv]
compile-bytecode = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
